Bug 91227 - commit "Disable CRTCs when disabling the outputs" makes my 3rd screen flicker
Summary: commit "Disable CRTCs when disabling the outputs" makes my 3rd screen flicker
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-04 17:50 UTC by fredrik
Modified: 2015-07-07 02:23 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch (1.07 KB, patch)
2015-07-06 17:28 UTC, Piotr Redlewski
no flags Details | Splinter Review

Description fredrik 2015-07-04 17:50:01 UTC
VGA compatible controller: Advanced Micro Devices, Inc. [AMD/ATI] Cape Verde PRO [Radeon HD 7750 / R7 250E] (prog-if 00 [VGA controller])
Subsystem: PC Partner Limited / Sapphire Technology Cape Verde PRO [Radeon HD 7750/8740 / R7 250E]
--

My 3rd display:
DVI-0 connected 1680x1050+3840+0 (normal left inverted right x axis y axis) 474mm x 296mm
   1680x1050     59.88*+
Flickers on and off a couple of times per minute. Nothing in dmesg but I see this in xorg.log:

[   487.411] (WW) RADEON(0): flip queue failed in radeon_scanout_flip: Device or resource busy
[   487.427] (WW) RADEON(0): flip queue failed in radeon_scanout_flip: Device or resource busy
[   517.461] (WW) RADEON(0): flip queue failed in radeon_scanout_flip: Device or resource busy
[   517.477] (WW) RADEON(0): flip queue failed in radeon_scanout_flip: Device or resource busy


Reverting http://cgit.freedesktop.org/xorg/driver/xf86-video-ati/commit/?id=ddaba449e8d6fe9fc0d97085e4045843fd8d7af9 solves my issues.
Comment 1 Piotr Redlewski 2015-07-06 17:28:52 UTC
Created attachment 116981 [details] [review]
Patch

Can you check whether attached patch helps?
Comment 2 fredrik 2015-07-06 17:43:59 UTC
(In reply to Piotr Redlewski from comment #1)
> Created attachment 116981 [details] [review] [review]
> Patch
> 
> Can you check whether attached patch helps?

Yeah, that does the trick. Thanks
Comment 3 Michel Dänzer 2015-07-07 02:23:27 UTC
commit a8ed62010d5012dfb27773595c446b217f3c00c5
Author: Piotr Redlewski <predlewski@gmail.com>
Date:   Mon Jul 6 19:57:07 2015 +0200

    Do not try to enable already enabled CRTCs in DPMS hook


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.