Do not try to enable already enabled CRTCs in DPMS hook

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=91227

Signed-off-by: Piotr Redlewski <predlewski@gmail.com>
Reviewed-by: Michel Dänzer <michel.daenzer@amd.com>